# lightmix

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  cubecl.toml  docker-entrypoint.sh
configs/: augmentations.toml  datasets.toml  experiments.toml  models.toml
inference/: Cargo.toml
inference/src/: main.rs
src/: main.rs
tools/: README.md  bench_viewer.py  convert_dataset.py  dashboard.py  pyproject.toml
training/: Cargo.toml  benchmark.md  burn.toml  experiments.toml
training/benches/: common.rs  data.rs  embeddings.rs  encoders.rs  kernels.rs.disabled  linear.rs  mixing.rs  models.rs  norm.rs
training/benchmarks/: results.jsonl
training/src/: config.rs  dataloader.rs  dataset.rs  inference.rs  lib.rs  main.rs  model.rs  spectre_vit.rs  training.rs  utils.rs
training/src/attention/: csp_attention.rs  learnedmixer.rs  mod.rs  self_attention.rs  sinkformer.rs  staticmixer.rs  stochasticmixer.rs  stochasticwindowmixer.rs
training/src/augmentations/: builder.rs  cloud.rs  colors.rs  mix.rs  mod.rs  normalize.rs  rotation.rs
training/src/benchmarks/: data.rs  embeddings.rs  fast_vit.rs  kernels.rs  mixing.rs  mod.rs  norm.rs  results.rs  spectre_vit.rs  utils.rs
training/src/compression/: mod.rs  transform.rs
training/src/conv/: mod.rs
training/src/curves/: mod.rs
training/src/data/: builder.rs  dataloader.rs  mod.rs
training/src/data/batch/: cifar10.rs  cifar100.rs  fashionmnist.rs  food101.rs  imagenet1k.rs  mnist.rs  mod.rs  modelnet40.rs  tinyimagenet.rs
training/src/data/dataloader/: inmemory.rs  mod.rs  stream.rs
training/src/data/dataloader/strategy/: buffered.rs  fixed.rs
training/src/data/dataset/: cifar10.rs  cifar100.rs  coco.rs  fashionmnist.rs  food101.rs  imagenet1k.rs  mnist.rs  mod.rs  modelnet40.rs  registry.rs  tinyimagenet.rs
training/src/data/mapper/: cifar10.rs  cifar100.rs  fashionmnist.rs  food101.rs  imagenet1k.rs  mnist.rs  mod.rs  tinyimagenet.rs
training/src/data/strategy/: buffered.rs  fixed.rs  mod.rs
training/src/databuilder/: builder.rs  dataloader.rs  mod.rs
training/src/dataset/: cifar100.rs  imagenet1k.rs  mnist.rs  mod.rs
training/src/embeddings/: cloud.rs  hilbert.rs  laplasian.rs  mod.rs  overlapped.rs  spectral.rs  vit.rs
training/src/encoders/: fast_encoder.rs  mod.rs
training/src/kernels/: backward.rs  benchmark.rs  forward.rs  hadamard.rs  launch.rs  mod.rs  monarch.rs
training/src/linear/: mod.rs  monarch.rs
training/src/logging/: mod.rs
training/src/metrics/: batchtime.rs  mod.rs  throughput.rs
training/src/mixing/: bandedmixer.rs  butterflymixer.rs  cascadedattention.rs  learnedmixer.rs  mod.rs  randommixer.rs  stochasticmixer.rs  stochasticwindowmixer.rs  weightedmixer.rs
training/src/models/: efficientvit.rs  fast_vit.rs  fast_vit3d.rs  mod.rs  parallel_vit.rs  registry.rs  self_vit.rs  spectre_vit.rs  swin.rs  vit.rs
training/src/norm/: benchmark.rs  mod.rs
training/src/spectre/: layers.rs  mod.rs  transform.rs
training/src/spectre_vit/: benchmark.rs  embeddings.rs  mod.rs  permute.rs
training/src/tokenization/: cloud.rs  hilbert.rs  mod.rs  spectral.rs  spectre_vit.rs  vit.rs
training/src/vit/: embeddings.rs  mod.rs
