[project]
name = "tools"
version = "0.0.1"
description = "Dataset parquet -> arrow conversion tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
]
