[project]
name = "lightmix_tools"
version = "0.0.2"
description = "Data analisys helpers for lightmix project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dash>=4.1.0",
  "dash-bootstrap-components>=2.0.4",
  "pillow>=12.1.1",
  "plotly>=6.6.0",
  "polars>=1.38.1",
  "pyarrow>=23.0.1",
]
